<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@drawable/bg_profile"
    tools:context=".ui.profile.ProfileFragment">


    <RelativeLayout
        android:id="@+id/container_profile_user"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/profile_user"
            android:layout_width="150dp"
            android:layout_height="150dp"
            android:layout_centerInParent="true"
            android:layout_marginTop="90dp"
            android:background="@drawable/profile_circle_red"
            android:gravity="center_horizontal"
            android:textColor="@color/white"
            android:textSize="110dp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />
    </RelativeLayout>

    <TextView
        android:id="@+id/profile_username"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingTop="10dp"
        android:paddingBottom="10dp"
        android:paddingLeft="30dp"
        android:layout_marginTop="50dp"
        android:layout_marginStart="40dp"
        android:layout_marginEnd="40dp"
        android:text="@string/title_username"
        android:textSize="18dp"
        android:textStyle="bold"
        android:textColor="@color/black"
        android:fontFamily="@font/roboto"
        android:background="@drawable/grey_border"
        app:layout_constraintTop_toBottomOf="@+id/container_profile_user"
        app:layout_constraintLeft_toRightOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        />

    <TextView
        android:id="@+id/profile_githubusername"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingTop="10dp"
        android:paddingBottom="10dp"
        android:paddingLeft="30dp"
        android:layout_marginTop="5dp"
        android:layout_marginStart="40dp"
        android:layout_marginEnd="40dp"
        android:text="@string/title_github_username"
        android:textSize="18dp"
        android:textStyle="bold"
        android:textColor="@color/black"
        android:fontFamily="@font/roboto"
        android:background="@drawable/grey_border"
        app:layout_constraintTop_toBottomOf="@+id/profile_username"
        app:layout_constraintLeft_toRightOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        />

    <TextView
        android:id="@+id/profile_nim"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingTop="10dp"
        android:paddingBottom="10dp"
        android:paddingLeft="30dp"
        android:layout_marginTop="5dp"
        android:layout_marginStart="40dp"
        android:layout_marginEnd="40dp"
        android:text="@string/title_nim"
        android:textSize="18dp"
        android:textStyle="bold"
        android:textColor="@color/black"
        android:fontFamily="@font/roboto"
        android:background="@drawable/grey_border"
        app:layout_constraintTop_toBottomOf="@+id/profile_githubusername"
        app:layout_constraintLeft_toRightOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        />

    <TextView
        android:id="@+id/profile_email"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingTop="10dp"
        android:paddingBottom="10dp"
        android:paddingLeft="30dp"
        android:layout_marginTop="5dp"
        android:layout_marginStart="40dp"
        android:layout_marginEnd="40dp"
        android:text="@string/title_email"
        android:textSize="18dp"
        android:textStyle="bold"
        android:textColor="@color/black"
        android:fontFamily="@font/roboto"
        android:background="@drawable/grey_border"
        app:layout_constraintTop_toBottomOf="@+id/profile_nim"
        app:layout_constraintLeft_toRightOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        />

    <Button
        android:id="@+id/profile_logout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="10dp"
        android:layout_marginTop="50dp"
        android:layout_marginRight="60dp"
        android:layout_marginLeft="60dp"
        android:backgroundTint="@color/blue_1000"
        android:text="@string/logout"
        android:textSize="24dp"
        app:cornerRadius="30dp"
        app:layout_constraintTop_toBottomOf="@+id/profile_email"
        app:layout_constraintLeft_toRightOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        />

</androidx.constraintlayout.widget.ConstraintLayout>